sonar findings gefixed